# llm-agent-from-scratch

./: .gitignore  README.md  Untitled.ipynb  copilot.py  llm-agent-from-scratch.ipynb  main.py  mcp.yaml  mcp.yaml.example  mcp.yaml.sample  pyproject.toml
hacks/: copilot_login.py  openai_client.py
