[project]
name = "llm-agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.72.0",
    "click>=8.3.0",
    "jupyter>=1.1.1",
    "mcp>=1.20.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
]
